# quadratic

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
quadratic/: __init__.py  __main__.py
tests/: test_quadratic.py
